--- a/src/main/resources/templates/User/contacts.html
+++ b/src/main/resources/templates/User/contacts.html
@@ -32,104 +32,67 @@
 
           <div class="contact_container p-5">
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-              <div
-                class="flex p-5 items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900"
+              <form
+                data-th-object="${contactSearchForm}"
+                data-th-action="@{'/user/contacts/search'}"
               >
-                <div>
-                  <button
-                    id="dropdownActionButton"
-                    data-dropdown-toggle="dropdownAction"
-                    class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
-                    type="button"
-                  >
-                    <span class="sr-only">Action button</span>
-                    Action
-                    <svg
-                      class="w-2.5 h-2.5 ms-2.5"
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 10 6"
+                <div
+                  class="flex p-5 space-x-3 items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900"
+                >
+                  <!-- select box  -->
+
+                  <div>
+                    <select
+                      data-th-field="*{field}"
+                      id="countries_disabled"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     >
-                      <path
-                        stroke="currentColor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="m1 1 4 4 4-4"
-                      />
-                    </svg>
-                  </button>
-                  <!-- Dropdown menu -->
-                  <div
-                    id="dropdownAction"
-                    class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600"
-                  >
-                    <ul
-                      class="py-1 text-sm text-gray-700 dark:text-gray-200"
-                      aria-labelledby="dropdownActionButton"
+                      <option selected value="">Select Field</option>
+                      <option value="name">Name</option>
+                      <option value="phone">Phone</option>
+                      <option value="email">Email</option>
+                    </select>
+                  </div>
+
+                  <label for="table-search" class="sr-only">Search</label>
+                  <div class="relative">
+                    <div
+                      class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none"
                     >
-                      <li>
-                        <a
-                          href="#"
-                          class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                          >Reward</a
-                        >
-                      </li>
-                      <li>
-                        <a
-                          href="#"
-                          class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                          >Promote</a
-                        >
-                      </li>
-                      <li>
-                        <a
-                          href="#"
-                          class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                          >Activate account</a
-                        >
-                      </li>
-                    </ul>
-                    <div class="py-1">
-                      <a
-                        href="#"
-                        class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-                        >Delete User</a
+                      <svg
+                        class="w-4 h-4 text-gray-500 dark:text-gray-400"
+                        aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg"
+                        fill="none"
+                        viewBox="0 0 20 20"
                       >
+                        <path
+                          stroke="currentColor"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+                        />
+                      </svg>
                     </div>
+                    <input
+                      data-th-field="*{value}"
+                      type="text"
+                      id="table-search-users"
+                      class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      placeholder="Search for users"
+                    />
                   </div>
-                </div>
-                <label for="table-search" class="sr-only">Search</label>
-                <div class="relative">
-                  <div
-                    class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none"
+                  <button
+                    type="submit"
+                    class="text-sm px-3 py-2 bg-gray-800 text-white rounded dark:bg-blue-600"
                   >
-                    <svg
-                      class="w-4 h-4 text-gray-500 dark:text-gray-400"
-                      aria-hidden="true"
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 20 20"
-                    >
-                      <path
-                        stroke="currentColor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
-                      />
-                    </svg>
-                  </div>
-                  <input
-                    type="text"
-                    id="table-search-users"
-                    class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Search for users"
-                  />
+                    Search
+                  </button>
                 </div>
-              </div>
+              </form>
               <table
+                data-th-if="${pageContact.totalElements>0}"
                 class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
               >
                 <thead
@@ -202,11 +165,15 @@
               </table>
 
               <!-- pagination component  -->
-              <div class="pagination_component p-5 text-center">
+              <div
+                data-th-if="${pageContact.totalElements>0}"
+                class="pagination_component bg-white dark:bg-gray-800 p-5 text-center"
+              >
                 <nav aria-label="Page navigation example">
                   <ul class="inline-flex -space-x-px text-sm">
-                    <li>
+                    <li data-th-unless="${pageContact.first}">
                       <a
+                        data-th-href="@{'/user/contacts?size='+${pageSize}+'&page='+${pageContact.number-1}}"
                         href="#"
                         class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
                         >Previous</a
@@ -216,15 +183,18 @@
                       data-th-each="index:${#numbers.sequence(0,pageContact.totalPages-1)}"
                     >
                       <a
-                        data-th-href="@{'/user/contacts?size=3&page='+${index}}"
+                        data-th-href="@{'/user/contacts?size='+${pageSize}+'&page='+${index}}"
+                        href=""
+                        data-th-classappend="${index==pageContact.number ? 'bg-blue-50 dark:bg-gray-600' : 'bg-white dark:bg-gray-800'}"
                         class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
                       >
                         <span data-th-text="${index+1}"></span>
                       </a>
                     </li>
 
-                    <li>
+                    <li data-th-unless="${pageContact.last}">
                       <a
+                        data-th-href="@{'/user/contacts?size='+${pageSize}+'&page='+${pageContact.number+1}}"
                         href="#"
                         class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
                         >Next</a
@@ -233,6 +203,12 @@
                   </ul>
                 </nav>
               </div>
+              <h1
+                class="text-3xl text-center bg-white p-4 dark:bg-gray-800"
+                data-th-if="${pageContact.totalElements<=0}"
+              >
+                No Contacts Found
+              </h1>
             </div>
           </div>
         </div>
