--- a/src/main/resources/templates/User/contacts.html
+++ b/src/main/resources/templates/User/contacts.html
@@ -162,7 +162,9 @@
                         </button>
 
                         <!-- Edit button (You might want to link to an edit page or trigger an edit action) -->
-                        <a href=""><i class="fa-solid fa-pen h-6 w-6"></i></a>
+                        <a data-th-href="@{'/user/contacts/view/'+*{id}}"
+                          ><i class="fa-solid fa-pen h-6 w-6"></i
+                        ></a>
 
                         <!-- Delete button -->
                         <button th:onclick="deleteContact([[${c.id}]])">
